# src/routes/api.js
@@ -1,6 +1,6 @@
 import express from 'express';
-import log from '../api/logging/api';
 import settings from '../api/settings/api';
+import users from '../api/users/api';
 import oaSpecs from '../api/specs/api';
 import m from '../middleware';
 const router = express.Router();
@@ -26,14 +26,19 @@ router.get('/health', (req, res) => {
 
 // todo auth and schema check
 // Settings
-router.get('/settings', settings.getSettings);
+router.get('/settings', m.isAuthenticated, settings.getSettings);
 
 // Specs
-
-router.post('/schema', [m.schemaCheck], oaSpecs.writeSpec);
+router.post('/schema', [m.isAuthenticated, m.schemaCheck], oaSpecs.writeSpec);
 router.get('/schema', oaSpecs.getSpecs);
 router.get('/schema/:id', oaSpecs.getSpec);
-router.patch('/schema/:id', [m.schemaCheck], oaSpecs.patchSpec);
-router.delete('/schema/:id', oaSpecs.deleteSpec);
+router.patch('/schema/:id', [m.isAuthenticated, m.schemaCheck], oaSpecs.patchSpec);
+router.delete('/schema/:id', m.isAuthenticated, oaSpecs.deleteSpec);
+
+// User
+router.post('/users', [m.schemaCheck], users.writeUser);
+router.get('/users', [m.isAuthenticated, m.schemaCheck], users.getUsers);
+router.get('/users/:id', [m.isAuthenticated, m.schemaCheck], users.getUser);
+router.delete('/users/:id', [m.isAuthenticated, m.schemaCheck], users.deleteUser);
 
 module.exports = router;
